Revision history for Perl extension TOML::XS:

0.05
- BUG FIX: Memory leak in array allocation is fixed.
- to_struct() is renamed to parse(); this can now extract specific values.
- Warn if objects are destroyed at global destruction.

0.04 Thu 15 Apr 2021
- Give explicit args to XSLoader::load().

0.03 Tue 13 Apr 2021
- Handle cases where tomlc99 doesn’t provide an error message
  (e.g., leading zeros).

0.02 Sun 11 Apr 2021
- Fix https://github.com/cktan/tomlc99/issues/52
  (Large TOML documents now decode MUCH faster!)
- Improved test coverage
- Documentation tweaks
- Added benchmarks

0.01 Sat 10 Apr 2021
- Initial release