@@ -10,11 +10,18 @@
 #include "toml.h"
 #include "tomlxs.h"
 
+/* Disabled for production because adding subprocess detection
+   would entail having a separate struct for the objects, which
+   seems likely to degrade performance.
+*/
+#define DETECT_LEAKS 0
+
 #define DOCUMENT_CLASS "TOML::XS::Document"
 #define TIMESTAMP_CLASS "TOML::XS::Timestamp"
 #define BOOLEAN_CLASS "TOML::XS"
 
-#define CROAK_ERR_MSG_FN "TOML::XS::_croak_err_message_from_pieces"
+#define CROAK_MALFORMED_TOML_FN "TOML::XS::_croak_malformed_toml"
+#define CROAK_POINTER_BEYOND_DATUM_FN "TOML::XS::_croak_pointer_beyond_datum"
 
 #define PERL_TRUE get_sv(BOOLEAN_CLASS "::true", 0)
 #define PERL_FALSE get_sv(BOOLEAN_CLASS "::false", 0)
@@ -27,13 +34,14 @@
 #define _IS_GLOBAL_DESTRUCT PL_dirty
 #endif
 
+/* cheating … */
+#define my_grok_atoUV Perl_grok_atoUV
+
 #define ERR_PATH_UNSHIFT(err_path_ptr, sv) STMT_START {   \
     if (NULL == *err_path_ptr) *err_path_ptr = newAV(); \
     av_unshift(*err_path_ptr, 1); \
     av_store(*err_path_ptr, 0, sv); \
 } STMT_END
-
-#define _datum_timestamp_to_sv(datum) _ptr_to_svrv(aTHX_ datum.u.ts, gv_stashpv(TIMESTAMP_CLASS, FALSE))
 
 #define _verify_no_null(tomlstr, tomllen)               \
     if (strchr(tomlstr, 0) != (tomlstr + tomllen)) {    \
@@ -97,7 +105,7 @@ static inline SV* _datum_string_to_sv( pTHX_ toml_datum_t d ) {
     if (d.ok) return _datum_double_to_sv(d);
 
 #define RETURN_IF_DATUM_IS_TIMESTAMP(d) \
-    if (d.ok) return _datum_timestamp_to_sv(d);
+    if (d.ok) return _datum_timestamp_to_sv(aTHX_ d);
 
 /* ---------------------------------------------------------------------- */
 
@@ -107,6 +115,77 @@ SV* _ptr_to_svrv(pTHX_ void* ptr, HV* stash) {
     sv_bless(retval, stash);
 
     return retval;
+}
+
+static inline SV* _datum_timestamp_to_sv( pTHX_ toml_datum_t datum ) {
+    return _ptr_to_svrv(aTHX_ datum.u.ts, gv_stashpv(TIMESTAMP_CLASS, FALSE));
+}
+
+static inline void _call_croaker_pv (pTHX_ const char* fn, AV* err_path) {
+    dSP;
+
+    ENTER;
+    SAVETMPS;
+
+    PUSHMARK(SP);
+    EXTEND(SP, 1);
+
+    /* When this mortal reference is reaped it’ll decrement
+        the referent AV’s refcount. */
+    mPUSHs(newRV_noinc( (SV*)err_path ));
+
+    PUTBACK;
+
+    call_pv(fn, G_DISCARD);
+
+    // Unneeded:
+    // FREETMPS;
+    // LEAVE;
+}
+
+static inline SV* _call_pv_scalar_1_1 (pTHX_ const char* fn, SV* arg) {
+    dSP;
+
+    ENTER;
+    SAVETMPS;
+
+    PUSHMARK(SP);
+    EXTEND(SP, 1);
+
+    mPUSHs(arg);
+
+    PUTBACK;
+
+    unsigned count = call_pv(fn, G_SCALAR);
+
+    SPAGAIN;
+
+    SV* ret;
+
+    if (count > 0) {
+        ret = newSVsv(POPs);
+    }
+    else {
+        ret = &PL_sv_undef;
+    }
+
+    PUTBACK;
+    FREETMPS;
+    LEAVE;
+
+    return ret;
+}
+
+static inline SV* _get_json_pointer_sv (pTHX_ SV** stack, unsigned stack_idx) {
+    AV* pointer = newAV();
+
+    for (unsigned i=0; i<=stack_idx; i++) {
+        av_push(pointer, newSVsv(stack[i]));
+    }
+
+    SV* pointer_ar = newRV_noinc( (SV*) pointer );
+
+    return _call_pv_scalar_1_1(aTHX_ "TOML::XS::_BUILD_JSON_POINTER", pointer_ar);
 }
 
 toml_table_t* _get_toml_table_from_sv(pTHX_ SV *self_sv) {
@@ -145,7 +224,7 @@ SV* _toml_table_to_sv(pTHX_ toml_table_t* tab, AV** err_path_ptr) {
             return NULL;
         }
 
-        hv_store(hv, key, strlen(key), sv, 0);
+        hv_store(hv, key, -strlen(key), sv, 0);
     }
 
     return newRV_noinc( (SV *) hv );
@@ -249,11 +328,13 @@ SV* _toml_array_value_to_sv(pTHX_ toml_array_t* curarr, int i, AV** err_path_ptr
     return NULL;
 }
 
-static void _warn_if_global_destruct_destroy( pTHX_ SV* obj ) {
+#if DETECT_LEAKS
+static inline void _warn_if_global_destruct_destroy( pTHX_ SV* obj ) {
     if (_IS_GLOBAL_DESTRUCT) {
         warn( "%" SVf " destroyed at global destruction; memory leak likely!\n", obj);
     }
 }
+#endif
 
 /* for profiling: */
 /*
@@ -281,13 +362,38 @@ typedef struct {
 
 toml_entity_t _drill_into_array(pTHX_ toml_array_t* arrin, SV** stack, unsigned stack_idx, unsigned drill_len, AV** err_path_ptr);
 
+static inline void _croak_if_datum_is_nonfinal_drill( pTHX_ SV** stack, unsigned stack_idx, unsigned drill_len) {
+    if (stack_idx != drill_len-1) {
+
+        SV* jsonpointer = _get_json_pointer_sv(aTHX_ stack, stack_idx);
+
+        SV* errsv = newSVpvf("Cannot descend into non-container! (JSON pointer: %" SVf ")", jsonpointer);
+        croak_sv(errsv);
+
+        assert(0);
+    }
+}
+
+static inline bool _table_has_key_sv(toml_table_t* tabin, const char* keystr) {
+    const char* key;
+
+    for (unsigned i = 0; ; i++) {
+        key = toml_key_in(tabin, i);
+        if (!key) break;
+
+        if (strEQ(key, keystr)) return true;
+    }
+
+    return false;
+}
+
 toml_entity_t _drill_into_table(pTHX_ toml_table_t* tabin, SV** stack, unsigned stack_idx, unsigned drill_len, AV** err_path_ptr) {
     toml_entity_t newent;
 
     SV* key_sv = stack[stack_idx];
 
     if (!SvOK(key_sv)) {
-        croak("Undef given in lookup (#%d)!", stack_idx);
+        croak("Uninitialized value given in pointer (#%d)!", stack_idx);
     }
 
     char* key = SvPVutf8_nolen(key_sv);
@@ -318,9 +424,7 @@ toml_entity_t _drill_into_table(pTHX_ toml_table_t* tabin, SV** stack, unsigned 
         }
     }
 
-    if (stack_idx != drill_len-1) {
-        croak("pointer too deep!");
-    }
+    _croak_if_datum_is_nonfinal_drill(aTHX_ stack, stack_idx, drill_len);
 
     newent.entity.datum = toml_string_in(tabin, key);
 
@@ -352,8 +456,12 @@ toml_entity_t _drill_into_table(pTHX_ toml_table_t* tabin, SV** stack, unsigned 
                         newent.type = TOML_XS_TYPE_TIMESTAMP;
                     }
                     else {
-                        // TODO: distinguish between invalid & missing
-                        croak("invalid or missing in table");
+                        SV* json_pointer = _get_json_pointer_sv(aTHX_ stack, stack_idx);
+                        if (_table_has_key_sv(tabin, key)) {
+                            croak("Invalid table element: %" SVf, json_pointer);
+                        }
+
+                        croak("Missing table element: %" SVf, json_pointer);
                     }
                 }
             }
@@ -374,16 +482,18 @@ toml_entity_t _drill_into_array(pTHX_ toml_array_t* arrin, SV** stack, unsigned 
         i = SvUV(key_sv);
     }
     else if (!SvOK(key_sv)) {
-        croak("Undef given as array index!");
+        croak("Undef given as pointer value (#%d)!", stack_idx);
     }
     else {
         UV idx_uv;
 
-        if (Perl_grok_atoUV(SvPVbyte_nolen(key_sv), &idx_uv, NULL)) {
+        if (my_grok_atoUV(SvPVbyte_nolen(key_sv), &idx_uv, NULL)) {
             i = idx_uv;
         }
         else {
-            croak("Non-numeric “%" SVf "” given as array index!", key_sv);
+            SV* json_pointer = _get_json_pointer_sv(aTHX_ stack, stack_idx - 1);
+            sv_2mortal(json_pointer);
+            croak("Non-number (%" SVf ") given as index to array (JSON pointer: %" SVf ")!", key_sv, json_pointer);
         }
     }
 
@@ -413,9 +523,7 @@ toml_entity_t _drill_into_array(pTHX_ toml_array_t* arrin, SV** stack, unsigned 
         }
     }
 
-    if (stack_idx != drill_len-1) {
-        croak("pointer too deep!");
-    }
+    _croak_if_datum_is_nonfinal_drill(aTHX_ stack, stack_idx, drill_len);
 
     newent.entity.datum = toml_string_at(arrin, i);
 
@@ -447,8 +555,14 @@ toml_entity_t _drill_into_array(pTHX_ toml_array_t* arrin, SV** stack, unsigned 
                         newent.type = TOML_XS_TYPE_TIMESTAMP;
                     }
                     else {
-                        croak("Invalid/missing array index: %" SVf, key_sv);
-                        // TODO: distinguish between invalid & missing
+                        SV* json_pointer = _get_json_pointer_sv(aTHX_ stack, stack_idx);
+                        unsigned arraylen = toml_array_nelem(arrin);
+
+                        if (i >= arraylen) {
+                            croak("Index exceeds max array index (%d; JSON pointer: %" SVf ")", arraylen - 1, json_pointer);
+                        }
+
+                        croak("Invalid array member (JSON pointer: %" SVf ")", json_pointer);
                     }
                 }
             }
@@ -494,6 +608,7 @@ parse (SV* docsv, ...)
     ALIAS:
         to_struct = 1
     CODE:
+        UNUSED(ix);
         toml_table_t* tab = _get_toml_table_from_sv(aTHX_ docsv);
 
         AV* err_path = NULL;
@@ -530,7 +645,7 @@ parse (SV* docsv, ...)
                     break;
 
                 case TOML_XS_TYPE_TIMESTAMP:
-                    RETVAL = _datum_timestamp_to_sv(root_entity.entity.datum);
+                    RETVAL = _datum_timestamp_to_sv(aTHX_ root_entity.entity.datum);
                     break;
 
                 default:
@@ -542,25 +657,7 @@ parse (SV* docsv, ...)
         }
 
         if (NULL == RETVAL) {
-            dSP;
-
-            ENTER;
-            SAVETMPS;
-
-            PUSHMARK(SP);
-            EXTEND(SP, 1);
-
-            /* When this mortal reference is reaped it’ll decrement
-               the referent AV’s refcount. */
-            mPUSHs(newRV_noinc( (SV*)err_path ));
-
-            PUTBACK;
-
-            call_pv(CROAK_ERR_MSG_FN, G_DISCARD);
-
-            // Unneeded:
-            // FREETMPS;
-            // LEAVE;
+            _call_croaker_pv(aTHX_ CROAK_MALFORMED_TOML_FN, err_path);
 
             assert(0);
         }
@@ -570,7 +667,9 @@ parse (SV* docsv, ...)
 void
 DESTROY (SV* docsv)
     CODE:
+#if DETECT_LEAKS
         _warn_if_global_destruct_destroy(aTHX_ docsv);
+#endif
 
         toml_table_t* tab = _get_toml_table_from_sv(aTHX_ docsv);
         toml_free(tab);
@@ -708,7 +807,9 @@ timezone (SV* selfsv)
 void
 DESTROY (SV* selfsv)
     CODE:
+#if DETECT_LEAKS
         _warn_if_global_destruct_destroy(aTHX_ selfsv);
+#endif
 
         toml_timestamp_t* ts = _get_toml_timestamp_from_sv(aTHX_ selfsv);
         tomlxs_free_timestamp(ts);
