@@ -2,8 +2,10 @@ Revision history for Perl extension TOML::XS:
 
 0.05
 - BUG FIX: Memory leak in array allocation is fixed.
-- to_struct() is renamed to parse(); this can now extract specific values.
-- Warn if objects are destroyed at global destruction.
+- BUG FIX: Decoded hash keys are now character-decoded.
+- to_struct() is renamed to parse(). (The old name remains for compatibility.)
+  This method can now extract specific values without converting the whole
+  document to Perl structures.
 
 0.04 Thu 15 Apr 2021
 - Give explicit args to XSLoader::load().
